Hecho el /feedback post e intentando el /feedback get
